--- a/nhost/metadata/databases/default/tables/tables.yaml
+++ b/nhost/metadata/databases/default/tables/tables.yaml
@@ -7,6 +7,9 @@
 - "!include auth_user_roles.yaml"
 - "!include auth_user_security_keys.yaml"
 - "!include auth_users.yaml"
+- "!include public_billing_plans.yaml"
+- "!include public_departments.yaml"
+- "!include public_org_size.yaml"
 - "!include public_organizations.yaml"
 - "!include storage_buckets.yaml"
 - "!include storage_files.yaml"
