enforce unique dept positions

--- a/.env.staging
+++ b/.env.staging
@@ -1,6 +1,20 @@
-HASURA_GRAPHQL_ENDPOINT=https://bgkrpcjhawoxjnfxufdf.hasura.<your-nhost>.run/v1/graphql
-NHOST_AUTH_URL=https://staging.auth.<your-nhost>.run/v1
-HASURA_ADMIN_SECRET=<if you need it for setup>
+# Nhost (staging) — eu-central-1
+NHOST_SUBDOMAIN=bgkrpcjhawoxjnfxufdf
+NHOST_REGION=eu-central-1
+
+# GraphQL (Hasura)
+HASURA_GRAPHQL_ENDPOINT=https://bgkrpcjhawoxjnfxufdf.hasura.eu-central-1.nhost.run/v1/graphql
+# Some libs expect this name too:
+NHOST_GRAPHQL_URL=https://bgkrpcjhawoxjnfxufdf.hasura.eu-central-1.nhost.run/v1/graphql
+
+# Auth
+NHOST_AUTH_URL=https://bgkrpcjhawoxjnfxufdf.auth.eu-central-1.nhost.run/v1
+
+# (Optional but handy)
+NHOST_STORAGE_URL=https://bgkrpcjhawoxjnfxufdf.storage.eu-central-1.nhost.run/v1
+NHOST_FUNCTIONS_URL=https://bgkrpcjhawoxjnfxufdf.functions.eu-central-1.nhost.run/v1
+
+HASURA_ADMIN_SECRET='da;0sl7@_BB%y,vu%e@Al$L#v*&y,XT5'
 
 NHOST_TEST_EMAIL_A=test@test.com
 NHOST_TEST_PASSWORD_A=1234test1234
